# krita

krita/: kritamenu.action
libs/ui/: KisMainWindow.cpp
plugins/dockers/: CMakeLists.txt
plugins/dockers/referencedocker/: CMakeLists.txt  ReferenceDocker.cpp  ReferenceDocker.h  ReferenceDockerDock.cpp  ReferenceDockerDock.h  ReferenceViewWidget.cpp  ReferenceViewWidget.h  WdgReferenceDocker.ui  krita_referencedocker.json
plugins/extensions/: CMakeLists.txt
plugins/extensions/toggledocker/: CMakeLists.txt  ToggleDocker.action  krita_toggledocker.json  toggledocker.cpp  toggledocker.h
